--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,10 @@
 body {
   width: 80vw;
   margin: 3% auto;
+  background-image: url("rose-petals.png");
+  background-size: cover;
+}
+
+h1 {
+  color: white;
 }
